feat(service_order): endpoint to get full details
