# internal/infra/handler/service_order/response.go
@@ -1,11 +1,69 @@
 package service_order
 
-import "github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/domain"
+import (
+	"fmt"
 
-type serviceOrderResponse struct {
-	ID     string `json:"id"`
-	Status string `json:"status"`
-}
+	"github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/domain"
+)
+
+type (
+	serviceOrderResponse struct {
+		ID     string `json:"id"`
+		Status string `json:"status"`
+	}
+
+	workItemResponse struct {
+		ID          string `json:"id"`
+		Name        string `json:"name"`
+		Description string `json:"description"`
+		Price       string `json:"price"`
+		Status      string `json:"status"`
+	}
+
+	supplyItemResponse struct {
+		ID          string `json:"id"`
+		Name        string `json:"name"`
+		Description string `json:"description"`
+		Price       string `json:"price"`
+		Version     int    `json:"version"`
+		Amount      int    `json:"amount"`
+	}
+
+	vehicleResponseDTO struct {
+		ID           string `json:"id"`
+		LicensePlate string `json:"licensePlate"`
+		BrandModel   string `json:"brandModel"`
+		Year         int    `json:"year"`
+	}
+
+	customerResponse struct {
+		ID          string              `json:"id"`
+		Name        string              `json:"name"`
+		Email       string              `json:"email"`
+		Type        domain.CustomerType `json:"type"`
+		Document    string              `json:"document"`
+		CompanyName string              `json:"company_name,omitempty"`
+		Phone       string              `json:"phone"`
+	}
+
+	listResponse[T any] struct {
+		Items      []T   `json:"items"`
+		TotalItems int64 `json:"totalItems"`
+		TotalPages int64 `json:"totalPages"`
+		PageSize   int64 `json:"pageSize"`
+		Page       int64 `json:"page"`
+	}
+
+	serviceOrderDetailResponse struct {
+		ID         string               `json:"id"`
+		Status     string               `json:"status"`
+		TotalValue float64              `json:"totalValue"`
+		Customer   customerResponse     `json:"customer"`
+		Vehicle    vehicleResponseDTO   `json:"vehicle"`
+		Works      []workItemResponse   `json:"works,omitempty"`
+		Supplies   []supplyItemResponse `json:"supplies,omitempty"`
+	}
+)
 
 func mapResponseDTOFromDomain(so domain.ServiceOrder) serviceOrderResponse {
 	return serviceOrderResponse{
@@ -14,32 +72,10 @@ func mapResponseDTOFromDomain(so domain.ServiceOrder) serviceOrderResponse {
 	}
 }
 
-type workItemResponse struct {
-	ID          string `json:"id"`
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	Price       string `json:"price"`
-	Status      string `json:"status"`
-}
-
-type supplyItemResponse struct {
-	ID          string `json:"id"`
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	Price       string `json:"price"`
-	Version     int    `json:"version"`
-	Amount      int    `json:"amount"`
-}
-
-type listResponse[T any] struct {
-	Items      []T   `json:"items"`
-	TotalItems int64 `json:"totalItems"`
-	TotalPages int64 `json:"totalPages"`
-	PageSize   int64 `json:"pageSize"`
-	Page       int64 `json:"page"`
-}
-
-func mapWorksListToResponse(works []domain.Work) listResponse[workItemResponse] {
+func mapWorks(works []domain.Work) []workItemResponse {
+	if len(works) == 0 {
+		return nil
+	}
 	items := make([]workItemResponse, 0, len(works))
 	for _, w := range works {
 		items = append(items, workItemResponse{
@@ -50,6 +86,11 @@ func mapWorksListToResponse(works []domain.Work) listResponse[workItemResponse] 
 			Status:      w.Status.String(),
 		})
 	}
+	return items
+}
+
+func mapWorksListToResponse(works []domain.Work) listResponse[workItemResponse] {
+	items := mapWorks(works)
 	n := int64(len(items))
 	return listResponse[workItemResponse]{
 		Items:      items,
@@ -60,7 +101,10 @@ func mapWorksListToResponse(works []domain.Work) listResponse[workItemResponse] 
 	}
 }
 
-func mapSuppliesListToResponse(supplies []domain.Supply) listResponse[supplyItemResponse] {
+func mapSupplies(supplies []domain.Supply) []supplyItemResponse {
+	if len(supplies) == 0 {
+		return nil
+	}
 	items := make([]supplyItemResponse, 0, len(supplies))
 	for _, w := range supplies {
 		items = append(items, supplyItemResponse{
@@ -72,6 +116,11 @@ func mapSuppliesListToResponse(supplies []domain.Supply) listResponse[supplyItem
 			Amount:      w.StockQuantity,
 		})
 	}
+	return items
+}
+
+func mapSuppliesListToResponse(supplies []domain.Supply) listResponse[supplyItemResponse] {
+	items := mapSupplies(supplies)
 	n := int64(len(items))
 	return listResponse[supplyItemResponse]{
 		Items:      items,
@@ -79,5 +128,45 @@ func mapSuppliesListToResponse(supplies []domain.Supply) listResponse[supplyItem
 		TotalPages: 1,
 		PageSize:   n,
 		Page:       1,
+	}
+}
+
+func mapCustomerResponse(c domain.Customer) customerResponse {
+	var document string
+	if c.Type == domain.IndividualCustomerType {
+		document = c.CPF
+	} else {
+		document = c.CNPJ
+	}
+
+	return customerResponse{
+		ID:          c.ID,
+		Name:        c.User.Name,
+		Email:       c.User.Email,
+		Type:        c.Type,
+		Document:    document,
+		CompanyName: c.CompanyName,
+		Phone:       c.Phone,
+	}
+}
+
+func mapVehicleResponse(v domain.Vehicle) vehicleResponseDTO {
+	return vehicleResponseDTO{
+		ID:           v.ID,
+		BrandModel:   fmt.Sprintf("%s - %s", v.Brand, v.Model),
+		Year:         v.Year,
+		LicensePlate: v.LicensePlate,
+	}
+}
+
+func mapServiceOrderDetailResponse(order domain.FullServiceOrder) serviceOrderDetailResponse {
+	return serviceOrderDetailResponse{
+		ID:         order.ID,
+		Status:     order.Status.String(),
+		TotalValue: order.TotalAmount.InexactFloat64(),
+		Customer:   mapCustomerResponse(*order.Customer),
+		Vehicle:    mapVehicleResponse(*order.Vehicle),
+		Works:      mapWorks(order.Works),
+		Supplies:   mapSupplies(order.Supplies),
 	}
 }
